--- a/CmsFui/CmsFui/MainPage.xaml
+++ b/CmsFui/CmsFui/MainPage.xaml
@@ -8,7 +8,7 @@
              x:Class="CmsFui.MainPage">
 
     <StackLayout Spacing="10">
-        <controls:PrimaryButton OnPressColor="Blue" OnReleaseColor="Black"  BackgroundColor="Black" TextColor="Wheat" Text="Hello"></controls:PrimaryButton>
+        <controls:PrimaryButton OnPressBackgroundColor="Blue" OnReleaseBackgroundColor="Black"  BackgroundColor="Black" TextColor="Wheat" Text="Hello"></controls:PrimaryButton>
     </StackLayout>
 
 </ContentPage>
