--- a/CmsFui/CmsFui/MainPage.xaml
+++ b/CmsFui/CmsFui/MainPage.xaml
@@ -8,7 +8,7 @@
              x:Class="CmsFui.MainPage">
 
     <StackLayout Spacing="10">
-        <controls:PrimaryButton OnPressBackgroundColor="Blue" OnReleaseBackgroundColor="Black"  BackgroundColor="Black" TextColor="Wheat" Text="Hello"></controls:PrimaryButton>
+        <controls:PrimaryButton Style="{DynamicResource PrimaryButton}" Text="Hello"></controls:PrimaryButton>
         <Label TextDecorations="Underline" FontSize="40" TextColor="Black" Text="Hello WOrld"></Label>
     </StackLayout>
 
