--- a/CmsFui/CmsFui/Views/StudentLoginView.xaml
+++ b/CmsFui/CmsFui/Views/StudentLoginView.xaml
@@ -57,7 +57,18 @@ mc:Ignorable="d"
                 <border:SfBorder Style="{DynamicResource PrimaryBorderStyle}">
                     <controls:PrimaryEntry x:Name="entryPassword" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"  Placeholder="*******" IsPassword="True"  Style="{DynamicResource PrimaryEntry}"></controls:PrimaryEntry>
                 </border:SfBorder>
-                <controls:PrimaryButton Style="{DynamicResource PrimaryButton}" Text="Login" Grid.Row="6" Grid.ColumnSpan="3" Margin="90,0,90,0" HeightRequest="53" FontSize="22"></controls:PrimaryButton>
+                <controls:PrimaryButton 
+                    Style="{DynamicResource PrimaryButton}"
+                    Text="Login"
+                    Grid.Row="6" Grid.ColumnSpan="3" 
+                    Margin="90,0,90,0"
+                    HeightRequest="53" 
+                    FontSize="22"
+                    x:Name="BtnLogin"
+                    Clicked="BtnLogin_OnClicked"
+                    >
+
+                </controls:PrimaryButton>
             </StackLayout>
 
             <StackLayout VerticalOptions="End" Margin="0,10,0,0" Spacing="10">
